[gd_scene load_steps=10 format=2]

[ext_resource path="res://plants/b3.png" type="Texture" id=1]
[ext_resource path="res://plants/b2.png" type="Texture" id=2]
[ext_resource path="res://plants/b4.png" type="Texture" id=3]
[ext_resource path="res://plants/b5.png" type="Texture" id=4]
[ext_resource path="res://plants/b1.png" type="Texture" id=5]
[ext_resource path="res://plants/b6.png" type="Texture" id=6]
[ext_resource path="res://attack.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 22.0

[node name="attack" type="RigidBody2D"]
collision_layer = 4
collision_mask = 2
gravity_scale = 0.0
contacts_reported = 3
contact_monitor = true
can_sleep = false
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_attack_body_entered"]
[connection signal="dhit" from="." to="." method="_on_attack_dhit"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
